logic server interceptor
