# pkg/logic/user/server/server.go
@@ -2,19 +2,27 @@ package server
 
 import (
 	"context"
+	"github.com/dgrijalva/jwt-go"
 	"log"
+	"time"
 
 	"goodgoodstudy.com/go-grpc/client/account"
 	"goodgoodstudy.com/go-grpc/client/wallet"
 	pb "goodgoodstudy.com/go-grpc/pkg/pb/logic/user"
 	apb "goodgoodstudy.com/go-grpc/pkg/pb/server/account"
+
 )
+
+type CustomClaims struct {
+	userInfo  *apb.UserInfo
+	jwt.StandardClaims
+}
+
 
 type UserLogic struct {
 	accountClient *account.Client
 	walletClient  *wallet.Client
 }
-
 
 
 func NewUserLogic() (*UserLogic, error) {
@@ -40,7 +48,7 @@ func (s *UserLogic) Login(ctx context.Context, req *pb.LoginReq) (resp *pb.Login
 	resp = &pb.LoginResp{}
 
 	// 1. check password
-	// 这里不能反悔，否则grpc 框架会报错。
+	// 这里不能返回，否则grpc 框架会报错。
 	r, err := s.accountClient.CheckPwd(ctx, req.Account, req.Password)
 	if err != nil {
 		log.Println("logic.Login check password failed: ", err)
@@ -52,6 +60,14 @@ func (s *UserLogic) Login(ctx context.Context, req *pb.LoginReq) (resp *pb.Login
 		Nickname: r.UserInfo.Nickname,
 		Gender:   pb.Gender(r.UserInfo.Gender),
 	}
+
+	// new token
+	token, err := s.NewWithCustomClaims(&apb.UserInfo{})
+	if err != nil {
+		log.Println("new claims failed: ", err)
+		return
+	}
+	resp.Token = token
 
 	// 2. get balance
 	userBalance, err := s.walletClient.GetUserById(ctx, resp.UserInfo.UserId)
@@ -68,7 +84,7 @@ func (s *UserLogic) Login(ctx context.Context, req *pb.LoginReq) (resp *pb.Login
 func (s *UserLogic) Register(ctx context.Context, req *pb.RegisterReq) (resp *pb.RegisterResp, err error) {
 	resp = &pb.RegisterResp{}
 	// 3.1 提交注册信息
-	r, err := s.accountClient.AddUsr(ctx, req.Account, req.Password, req.Nickname, apb.Gender(req.Gender))
+	r, err := s.accountClient.AddUser(ctx, req.Account, req.Password, req.Nickname, apb.Gender(req.Gender))
 	if err != nil {
 		log.Println("logic Register register failed: ", err)
 		return
@@ -78,10 +94,10 @@ func (s *UserLogic) Register(ctx context.Context, req *pb.RegisterReq) (resp *pb
 	return resp, nil
 }
 
-<<<<<<< HEAD
-//4. 充值服务
+// 4. 充值服务
 func (s *UserLogic) Recharge(ctx context.Context, req *pb.RechargeReq) (resp *pb.RechargeResp, err error) {
 	resp = &pb.RechargeResp{}
+
 	// 4.1 发送请求
 	_, err = s.walletClient.Recharge(ctx, req.UserId, req.Delta)
 	if err != nil {
@@ -90,9 +106,49 @@ func (s *UserLogic) Recharge(ctx context.Context, req *pb.RechargeReq) (resp *pb
 	}
 	return resp, nil
 }
-=======
-func (s *UserLogic) Recharge(ctx context.Context, req *pb.RechargeReq) (resp *pb.RechargeResp, err error) {
-	// TODO
-	return nil, nil
+
+func (s *UserLogic) GetUserById(ctx context.Context, req *pb.GetUserByIdReq) (resp *pb.GetUserByIdResp, err error) {
+	resp = &pb.GetUserByIdResp{}
+	r, err := s.accountClient.GetUserByUserId(ctx, req.UserId)
+	if err != nil {
+		log.Println("logic server getUser failed: ", err)
+		return
+	}
+	resp.UserInfo = &pb.UserInfo{
+		UserId:               r.UserInfo.UserId,
+		Account:              r.UserInfo.Account,
+		Nickname:             r.UserInfo.Nickname,
+		Gender:               pb.Gender(r.UserInfo.Gender),
+	}
+	return resp, nil
+
 }
->>>>>>> 937cfcfc787f8f93d385cce145740d9f76f358b8
+
+
+// 5 new claims
+func (s *UserLogic)NewWithCustomClaims(userInfo *apb.UserInfo) (ss string, err error) {
+	mySigningKey := []byte("66666")
+
+	// create claims
+
+	claims := &CustomClaims{
+		userInfo: userInfo,
+		StandardClaims: jwt.StandardClaims{
+			Issuer:    userInfo.Account,
+			ExpiresAt: 15000,
+			Subject:   "test",
+			IssuedAt:  time.Now().Unix(),
+		},
+	}
+
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	ss, err = token.SignedString(mySigningKey)
+	if err != nil {
+		log.Println("server token failed:", err)
+		return ss, err
+	}
+	return ss, nil
+}
+
+
+
