# pkg/pb/server/account/account.pb.go
@@ -52,7 +52,7 @@ func (Gender) EnumDescriptor() ([]byte, []int) {
 	return fileDescriptor_56d089a9b5e998c0, []int{0}
 }
 
-type AddUsrReq struct {
+type AddUserReq struct {
 	Account              string   `protobuf:"bytes,1,opt,name=account,proto3" json:"account,omitempty"`
 	Password             string   `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
 	Name                 string   `protobuf:"bytes,3,opt,name=name,proto3" json:"name,omitempty"`
@@ -62,92 +62,92 @@ type AddUsrReq struct {
 	XXX_sizecache        int32    `json:"-"`
 }
 
-func (m *AddUsrReq) Reset()         { *m = AddUsrReq{} }
-func (m *AddUsrReq) String() string { return proto.CompactTextString(m) }
-func (*AddUsrReq) ProtoMessage()    {}
-func (*AddUsrReq) Descriptor() ([]byte, []int) {
+func (m *AddUserReq) Reset()         { *m = AddUserReq{} }
+func (m *AddUserReq) String() string { return proto.CompactTextString(m) }
+func (*AddUserReq) ProtoMessage()    {}
+func (*AddUserReq) Descriptor() ([]byte, []int) {
 	return fileDescriptor_56d089a9b5e998c0, []int{0}
 }
 
-func (m *AddUsrReq) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_AddUsrReq.Unmarshal(m, b)
+func (m *AddUserReq) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_AddUserReq.Unmarshal(m, b)
 }
-func (m *AddUsrReq) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_AddUsrReq.Marshal(b, m, deterministic)
+func (m *AddUserReq) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_AddUserReq.Marshal(b, m, deterministic)
 }
-func (m *AddUsrReq) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_AddUsrReq.Merge(m, src)
+func (m *AddUserReq) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_AddUserReq.Merge(m, src)
 }
-func (m *AddUsrReq) XXX_Size() int {
-	return xxx_messageInfo_AddUsrReq.Size(m)
+func (m *AddUserReq) XXX_Size() int {
+	return xxx_messageInfo_AddUserReq.Size(m)
 }
-func (m *AddUsrReq) XXX_DiscardUnknown() {
-	xxx_messageInfo_AddUsrReq.DiscardUnknown(m)
+func (m *AddUserReq) XXX_DiscardUnknown() {
+	xxx_messageInfo_AddUserReq.DiscardUnknown(m)
 }
 
-var xxx_messageInfo_AddUsrReq proto.InternalMessageInfo
+var xxx_messageInfo_AddUserReq proto.InternalMessageInfo
 
-func (m *AddUsrReq) GetAccount() string {
+func (m *AddUserReq) GetAccount() string {
 	if m != nil {
 		return m.Account
 	}
 	return ""
 }
 
-func (m *AddUsrReq) GetPassword() string {
+func (m *AddUserReq) GetPassword() string {
 	if m != nil {
 		return m.Password
 	}
 	return ""
 }
 
-func (m *AddUsrReq) GetName() string {
+func (m *AddUserReq) GetName() string {
 	if m != nil {
 		return m.Name
 	}
 	return ""
 }
 
-func (m *AddUsrReq) GetGender() Gender {
+func (m *AddUserReq) GetGender() Gender {
 	if m != nil {
 		return m.Gender
 	}
 	return Gender_UNKNOWN
 }
 
-type AddUsrResp struct {
+type AddUserResp struct {
 	UserId               uint32   `protobuf:"varint,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
 }
 
-func (m *AddUsrResp) Reset()         { *m = AddUsrResp{} }
-func (m *AddUsrResp) String() string { return proto.CompactTextString(m) }
-func (*AddUsrResp) ProtoMessage()    {}
-func (*AddUsrResp) Descriptor() ([]byte, []int) {
+func (m *AddUserResp) Reset()         { *m = AddUserResp{} }
+func (m *AddUserResp) String() string { return proto.CompactTextString(m) }
+func (*AddUserResp) ProtoMessage()    {}
+func (*AddUserResp) Descriptor() ([]byte, []int) {
 	return fileDescriptor_56d089a9b5e998c0, []int{1}
 }
 
-func (m *AddUsrResp) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_AddUsrResp.Unmarshal(m, b)
+func (m *AddUserResp) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_AddUserResp.Unmarshal(m, b)
 }
-func (m *AddUsrResp) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_AddUsrResp.Marshal(b, m, deterministic)
+func (m *AddUserResp) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_AddUserResp.Marshal(b, m, deterministic)
 }
-func (m *AddUsrResp) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_AddUsrResp.Merge(m, src)
+func (m *AddUserResp) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_AddUserResp.Merge(m, src)
 }
-func (m *AddUsrResp) XXX_Size() int {
-	return xxx_messageInfo_AddUsrResp.Size(m)
+func (m *AddUserResp) XXX_Size() int {
+	return xxx_messageInfo_AddUserResp.Size(m)
 }
-func (m *AddUsrResp) XXX_DiscardUnknown() {
-	xxx_messageInfo_AddUsrResp.DiscardUnknown(m)
+func (m *AddUserResp) XXX_DiscardUnknown() {
+	xxx_messageInfo_AddUserResp.DiscardUnknown(m)
 }
 
-var xxx_messageInfo_AddUsrResp proto.InternalMessageInfo
+var xxx_messageInfo_AddUserResp proto.InternalMessageInfo
 
-func (m *AddUsrResp) GetUserId() uint32 {
+func (m *AddUserResp) GetUserId() uint32 {
 	if m != nil {
 		return m.UserId
 	}
@@ -462,8 +462,8 @@ func (m *GetUserByIdResp) GetUserInfo() *UserInfo {
 
 func init() {
 	proto.RegisterEnum("account.Gender", Gender_name, Gender_value)
-	proto.RegisterType((*AddUsrReq)(nil), "account.AddUsrReq")
-	proto.RegisterType((*AddUsrResp)(nil), "account.AddUsrResp")
+	proto.RegisterType((*AddUserReq)(nil), "account.AddUserReq")
+	proto.RegisterType((*AddUserResp)(nil), "account.AddUserResp")
 	proto.RegisterType((*UserInfo)(nil), "account.UserInfo")
 	proto.RegisterType((*CheckPwdReq)(nil), "account.CheckPwdReq")
 	proto.RegisterType((*CheckPwdResp)(nil), "account.CheckPwdResp")
@@ -476,33 +476,34 @@ func init() {
 func init() { proto.RegisterFile("server/account/account.proto", fileDescriptor_56d089a9b5e998c0) }
 
 var fileDescriptor_56d089a9b5e998c0 = []byte{
-	// 416 bytes of a gzipped FileDescriptorProto
+	// 417 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xdf, 0x6b, 0xda, 0x50,
-	0x14, 0x36, 0x99, 0x24, 0xf1, 0x64, 0x53, 0x77, 0x54, 0x0c, 0xc1, 0x81, 0x04, 0xc6, 0xdc, 0x06,
-	0x06, 0xf4, 0x69, 0x2f, 0x83, 0x28, 0x2a, 0xb2, 0xcd, 0x6d, 0x01, 0x19, 0xec, 0xa5, 0x68, 0x72,
-	0xb5, 0x22, 0x4d, 0xd2, 0x5c, 0xad, 0xf4, 0xa5, 0x0f, 0xfd, 0x0b, 0xfa, 0x27, 0x97, 0xdc, 0xfc,
-	0x68, 0x6c, 0x54, 0x5a, 0x9f, 0x72, 0x7e, 0xe5, 0x3b, 0xdf, 0xf9, 0xce, 0xe1, 0x42, 0x83, 0x12,
-	0xff, 0x86, 0xf8, 0xfa, 0xcc, 0xb2, 0xdc, 0xad, 0xb3, 0x89, 0xbf, 0x6d, 0xcf, 0x77, 0x37, 0x2e,
-	0x8a, 0x91, 0xab, 0xdd, 0x41, 0xc1, 0xb0, 0xed, 0x29, 0xf5, 0x4d, 0x72, 0x8d, 0x0a, 0xc4, 0x71,
-	0x85, 0x6b, 0x72, 0xad, 0x82, 0x19, 0xbb, 0xa8, 0x82, 0xe4, 0xcd, 0x28, 0xdd, 0xb9, 0xbe, 0xad,
-	0xf0, 0x2c, 0x95, 0xf8, 0x88, 0x90, 0x77, 0x66, 0x57, 0x44, 0x79, 0xc3, 0xe2, 0xcc, 0xc6, 0x4f,
-	0x20, 0x2c, 0x89, 0x63, 0x13, 0x5f, 0xc9, 0x37, 0xb9, 0x56, 0xb1, 0x53, 0x6a, 0xc7, 0xfd, 0x47,
-	0x2c, 0x6c, 0x46, 0x69, 0xed, 0x23, 0x40, 0xdc, 0x9f, 0x7a, 0x58, 0x07, 0x71, 0x4b, 0x89, 0x7f,
-	0xb1, 0xb2, 0x19, 0x81, 0x77, 0xa6, 0x10, 0xb8, 0x63, 0x5b, 0xbb, 0xe7, 0x40, 0x9a, 0x06, 0xa6,
-	0xb3, 0x70, 0x8f, 0x56, 0xa5, 0xf9, 0xf3, 0x19, 0xfe, 0xce, 0xca, 0x5a, 0xa7, 0x78, 0x26, 0xfe,
-	0xcb, 0xb9, 0xf6, 0x41, 0xee, 0x5f, 0x12, 0x6b, 0xfd, 0x67, 0x67, 0x9f, 0xad, 0x96, 0xf6, 0x1d,
-	0xde, 0x3e, 0x81, 0x50, 0x0f, 0xdb, 0x50, 0x08, 0x87, 0x71, 0x16, 0x2e, 0xc3, 0x91, 0x3b, 0xef,
-	0x13, 0x02, 0xf1, 0xc8, 0xa6, 0xb4, 0x8d, 0x2c, 0x4d, 0x87, 0xca, 0x88, 0x6c, 0x82, 0x44, 0xef,
-	0xd6, 0x08, 0xcb, 0x4e, 0x92, 0xd1, 0x86, 0x50, 0xcd, 0xfe, 0x70, 0x46, 0xe3, 0xcf, 0x50, 0x4c,
-	0x70, 0xc6, 0x4c, 0x80, 0xa3, 0xdb, 0x32, 0xa0, 0xb4, 0x57, 0xfa, 0xfa, 0x6e, 0x5f, 0xbe, 0x82,
-	0x10, 0xaa, 0x8f, 0x32, 0x88, 0xd3, 0xc9, 0x8f, 0xc9, 0xef, 0x7f, 0x93, 0x72, 0x0e, 0x01, 0x84,
-	0xe1, 0xe0, 0x97, 0xf1, 0x73, 0x50, 0xe6, 0x50, 0x82, 0x3c, 0xb3, 0xf8, 0xce, 0x03, 0x0f, 0x62,
-	0x34, 0x1a, 0x76, 0x41, 0x08, 0x0f, 0x0a, 0x31, 0xc1, 0x4f, 0x2e, 0x5c, 0xad, 0x64, 0x62, 0xd4,
-	0xd3, 0x72, 0xf8, 0x0d, 0xa4, 0x78, 0x29, 0x58, 0x4d, 0x4a, 0x52, 0xcb, 0x56, 0x6b, 0x07, 0xa2,
-	0xec, 0xd7, 0xbf, 0x50, 0x7e, 0x2e, 0x2f, 0x36, 0x52, 0x17, 0x94, 0x59, 0x95, 0xfa, 0xe1, 0x44,
-	0x96, 0x41, 0xf6, 0x40, 0x4e, 0xc9, 0x87, 0xf5, 0x6c, 0x3d, 0xd3, 0x5f, 0x55, 0x0e, 0x27, 0x02,
-	0x8c, 0x5e, 0xfd, 0x7f, 0xcd, 0x5b, 0x2f, 0x75, 0x6f, 0xae, 0xef, 0xbf, 0x03, 0x73, 0x81, 0x3d,
-	0x00, 0xdd, 0xc7, 0x00, 0x00, 0x00, 0xff, 0xff, 0x23, 0xbc, 0x84, 0x48, 0x20, 0x04, 0x00, 0x00,
+	0x14, 0x36, 0x99, 0x24, 0xf1, 0x64, 0x53, 0x77, 0x54, 0x0c, 0xc1, 0x81, 0xe4, 0x61, 0x73, 0x1b,
+	0x18, 0x70, 0x30, 0xd8, 0xcb, 0x20, 0x8a, 0x8a, 0x6c, 0x73, 0x6d, 0x40, 0x0a, 0x7d, 0x29, 0x9a,
+	0x5c, 0xad, 0x48, 0x93, 0x34, 0x57, 0x2b, 0x7d, 0x2a, 0xf4, 0x5f, 0xe8, 0x3f, 0x5c, 0x72, 0x4d,
+	0x62, 0x6c, 0x54, 0x5a, 0x9f, 0x72, 0xce, 0xf9, 0xbe, 0x9c, 0xf3, 0x9d, 0x1f, 0x5c, 0xa8, 0x51,
+	0xe2, 0xdf, 0x11, 0x5f, 0x1f, 0x5b, 0x96, 0xbb, 0x72, 0x96, 0xd1, 0xb7, 0xe9, 0xf9, 0xee, 0xd2,
+	0x45, 0x31, 0x74, 0xb5, 0x07, 0x00, 0xc3, 0xb6, 0x47, 0x94, 0xf8, 0x26, 0xb9, 0x45, 0x05, 0x22,
+	0x40, 0xe1, 0xea, 0x5c, 0x23, 0x67, 0x46, 0x2e, 0xaa, 0x20, 0x79, 0x63, 0x4a, 0xd7, 0xae, 0x6f,
+	0x2b, 0x3c, 0x83, 0x62, 0x1f, 0x11, 0xb2, 0xce, 0xf8, 0x86, 0x28, 0xef, 0x58, 0x9c, 0xd9, 0xf8,
+	0x05, 0x84, 0x19, 0x71, 0x6c, 0xe2, 0x2b, 0xd9, 0x3a, 0xd7, 0xc8, 0xb7, 0x0a, 0xcd, 0x48, 0x40,
+	0x9f, 0x85, 0xcd, 0x10, 0xd6, 0x3e, 0x83, 0x1c, 0x0b, 0xa0, 0x1e, 0x56, 0x41, 0x5c, 0x51, 0xe2,
+	0x5f, 0xcd, 0x6d, 0xa6, 0xe0, 0x83, 0x29, 0x04, 0xee, 0xc0, 0xd6, 0x1e, 0x39, 0x90, 0x02, 0xd6,
+	0xc0, 0x99, 0xba, 0x07, 0x59, 0xc9, 0x06, 0xf8, 0x54, 0x03, 0xce, 0xdc, 0x5a, 0x24, 0x84, 0xc6,
+	0xfe, 0xeb, 0xc5, 0x76, 0x40, 0xee, 0x5c, 0x13, 0x6b, 0x71, 0xb6, 0xb6, 0x4f, 0x1e, 0x97, 0xf6,
+	0x1b, 0xde, 0x6f, 0x93, 0x50, 0x0f, 0x9b, 0x90, 0xdb, 0x34, 0xe3, 0x4c, 0x5d, 0x96, 0x47, 0x6e,
+	0x7d, 0x8c, 0x05, 0x44, 0x2d, 0x9b, 0xd2, 0x2a, 0xb4, 0x34, 0x1d, 0x4a, 0x7d, 0xb2, 0x0c, 0x80,
+	0xf6, 0xbd, 0xb1, 0xa1, 0x1d, 0x15, 0xa3, 0xf5, 0xa0, 0x9c, 0xfe, 0xe1, 0x84, 0xc2, 0x5f, 0x21,
+	0x1f, 0xe7, 0x19, 0xb0, 0x01, 0x1c, 0xdc, 0x96, 0x01, 0x85, 0x1d, 0xea, 0xdb, 0xab, 0x7d, 0xfb,
+	0x0e, 0xc2, 0x66, 0xfa, 0x28, 0x83, 0x38, 0x1a, 0xfe, 0x19, 0xfe, 0xbf, 0x18, 0x16, 0x33, 0x08,
+	0x20, 0xf4, 0xba, 0xff, 0x8c, 0xbf, 0xdd, 0x22, 0x87, 0x12, 0x64, 0x99, 0xc5, 0xb7, 0x9e, 0x78,
+	0x10, 0xc3, 0xd6, 0xf0, 0x27, 0x88, 0xe1, 0x45, 0x61, 0x29, 0x2e, 0xb0, 0x3d, 0x72, 0xb5, 0x9c,
+	0x0e, 0x52, 0x4f, 0xcb, 0xe0, 0x2f, 0x90, 0xa2, 0xbd, 0xe0, 0x96, 0x93, 0xd8, 0xb7, 0x5a, 0xd9,
+	0x13, 0x65, 0xbf, 0x9e, 0x43, 0xf1, 0xe5, 0x84, 0xb1, 0x96, 0x38, 0xa2, 0xd4, 0xb6, 0xd4, 0x4f,
+	0x47, 0x50, 0x96, 0xb2, 0x0d, 0x72, 0x62, 0x82, 0x58, 0x4d, 0xf3, 0xd9, 0x0a, 0x54, 0x65, 0x3f,
+	0x10, 0xe4, 0x68, 0x57, 0x2f, 0x2b, 0xde, 0x62, 0xa6, 0x7b, 0x13, 0x7d, 0xf7, 0x31, 0x98, 0x08,
+	0xec, 0x15, 0xf8, 0xf1, 0x1c, 0x00, 0x00, 0xff, 0xff, 0x74, 0x4d, 0x7f, 0x33, 0x25, 0x04, 0x00,
+	0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -517,7 +518,7 @@ const _ = grpc.SupportPackageIsVersion4
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type AccountClient interface {
-	AddUsr(ctx context.Context, in *AddUsrReq, opts ...grpc.CallOption) (*AddUsrResp, error)
+	AddUser(ctx context.Context, in *AddUserReq, opts ...grpc.CallOption) (*AddUserResp, error)
 	CheckPwd(ctx context.Context, in *CheckPwdReq, opts ...grpc.CallOption) (*CheckPwdResp, error)
 	GetUserByAccount(ctx context.Context, in *GetUserByAccountReq, opts ...grpc.CallOption) (*GetUserByAccountResp, error)
 	GetUserById(ctx context.Context, in *GetUserByIdReq, opts ...grpc.CallOption) (*GetUserByIdResp, error)
@@ -531,9 +532,9 @@ func NewAccountClient(cc *grpc.ClientConn) AccountClient {
 	return &accountClient{cc}
 }
 
-func (c *accountClient) AddUsr(ctx context.Context, in *AddUsrReq, opts ...grpc.CallOption) (*AddUsrResp, error) {
-	out := new(AddUsrResp)
-	err := c.cc.Invoke(ctx, "/account.Account/AddUsr", in, out, opts...)
+func (c *accountClient) AddUser(ctx context.Context, in *AddUserReq, opts ...grpc.CallOption) (*AddUserResp, error) {
+	out := new(AddUserResp)
+	err := c.cc.Invoke(ctx, "/account.Account/AddUser", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -569,7 +570,7 @@ func (c *accountClient) GetUserById(ctx context.Context, in *GetUserByIdReq, opt
 
 // AccountServer is the server API for Account service.
 type AccountServer interface {
-	AddUsr(context.Context, *AddUsrReq) (*AddUsrResp, error)
+	AddUser(context.Context, *AddUserReq) (*AddUserResp, error)
 	CheckPwd(context.Context, *CheckPwdReq) (*CheckPwdResp, error)
 	GetUserByAccount(context.Context, *GetUserByAccountReq) (*GetUserByAccountResp, error)
 	GetUserById(context.Context, *GetUserByIdReq) (*GetUserByIdResp, error)
@@ -579,8 +580,8 @@ type AccountServer interface {
 type UnimplementedAccountServer struct {
 }
 
-func (*UnimplementedAccountServer) AddUsr(ctx context.Context, req *AddUsrReq) (*AddUsrResp, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method AddUsr not implemented")
+func (*UnimplementedAccountServer) AddUser(ctx context.Context, req *AddUserReq) (*AddUserResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddUser not implemented")
 }
 func (*UnimplementedAccountServer) CheckPwd(ctx context.Context, req *CheckPwdReq) (*CheckPwdResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CheckPwd not implemented")
@@ -596,20 +597,20 @@ func RegisterAccountServer(s *grpc.Server, srv AccountServer) {
 	s.RegisterService(&_Account_serviceDesc, srv)
 }
 
-func _Account_AddUsr_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(AddUsrReq)
+func _Account_AddUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddUserReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(AccountServer).AddUsr(ctx, in)
+		return srv.(AccountServer).AddUser(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/account.Account/AddUsr",
+		FullMethod: "/account.Account/AddUser",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(AccountServer).AddUsr(ctx, req.(*AddUsrReq))
+		return srv.(AccountServer).AddUser(ctx, req.(*AddUserReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -673,8 +674,8 @@ var _Account_serviceDesc = grpc.ServiceDesc{
 	HandlerType: (*AccountServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "AddUsr",
-			Handler:    _Account_AddUsr_Handler,
+			MethodName: "AddUser",
+			Handler:    _Account_AddUser_Handler,
 		},
 		{
 			MethodName: "CheckPwd",
